--- a/user.properties
+++ b/user.properties
@@ -1,6 +1,6 @@
 # đây là file default cho UserMicroservices
 
-spring.application.name=UserMicroservices
+spring.application.name=user
 
 server.port=8080
 
