--- a/user-service.properties
+++ b/user-service.properties
@@ -1,4 +1,4 @@
-# đây là file default cho UserMicroservices
+app.message=This is default config for UserMicroservices
 
 spring.application.name=UserMicroservices
 
