--- a/user-service.properties
+++ b/user-service.properties
@@ -1,4 +1,4 @@
-app.message=This is default config for UserMicroservices
+a.message=This is default config for UserMicroservices
 
 spring.application.name=UserMicroservices
 
