--- a/application-pro.properties
+++ b/application-pro.properties
@@ -2,10 +2,13 @@ spring.application.name=ConfigServerV2
 
 server.port=8080
 
-app.name=this is bad
 spring.datasource.url=jdbc:mysql://localhost:3307/user_microservice
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
