--- a/application-pro.properties
+++ b/application-pro.properties
@@ -22,3 +22,8 @@ jwt.refresh.expiration=864000000
 jwt.algorithms=HmacSHA256
 jwt.header=Authorization
 jwt.prefix=Bearer
+
+spring.kafka.bootstrap-servers=localhost:9094
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
