--- a/usermicroservice-prod.properties
+++ b/usermicroservice-prod.properties
@@ -16,6 +16,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
+spring.config.import=configserver:http://localhost:8086/usermicroservice
 
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
