--- a/usermicroservice.properties
+++ b/usermicroservice.properties
@@ -1,6 +1,6 @@
 app.message=This is default config for UserMicroservices
 
-spring.application.name=UserMicroservices
+spring.application.name=UserMicroservicesDefault
 
 server.port=8080
 
