--- a/usermicroservice-prod.properties
+++ b/usermicroservice-prod.properties
@@ -1,6 +1,6 @@
 app.message=This is Prod config for UserMicroservices
 
-spring.application.name=UserMicroservices
+spring.application.name=UserMicroservicesProd
 
 server.port=8080
 
