--- a/informicroservice.properties
+++ b/informicroservice.properties
@@ -1,6 +1,7 @@
 
+app.message=This is Default config for informicroservice
 
-spring.application.name=informicroservice
+spring.application.name=InforMicroserviceDefault
 server.port=8081
 
 server.servlet.context-path=/info
