--- a/usermicroservice-dev.properties
+++ b/usermicroservice-dev.properties
@@ -1,6 +1,6 @@
 app.message=This is Dev config for UserMicroservices
 
-spring.application.name=UserMicroservice
+spring.application.name=UserMicroserviceDev
 
 server.port=8080
 
