--- a/usermicroservice-dev.properties
+++ b/usermicroservice-dev.properties
@@ -75,9 +75,11 @@ resilience4j.circuitbreaker.instances.companyBreaker.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.companyBreaker.register-health-indicator=true
 
 
+resilience4j.ratelimiter.instances.companyBreaker.timeout-duration= 0
+resilience4j.ratelimiter.instances.companyBreaker.limit-refresh-period= 4
+# giời hạn 2 requests mỗi 4s, nếu quá thì sẽ báo lỗi RateLimiterException
+resilience4j.ratelimiter.instances.companyBreaker.limit-for-period= 2
+
 resilience4j.retry.instances.companyBreaker.max-attempts=5
 resilience4j.retry.instances.companyBreaker.wait-duration=2s
 
-resilience4j.ratelimiter.instances.companyBreaker.timeout-duration=0
-resilience4j.ratelimiter.instances.companyBreaker.limit-refresh-period=4
-resilience4j.ratelimiter.instances.companyBreaker.limit-for-period=2
