--- a/usermicroservice-docker.properties
+++ b/usermicroservice-docker.properties
@@ -4,7 +4,7 @@
 info-microservice.url=http://infomicroservice:8081
 
 
-spring.application.name=UserMicroservice
+spring.application.name=UserMicroserviceDocker
 
 app.message=This is application-docker.properties
 
