--- a/informicroservice-docker.properties
+++ b/informicroservice-docker.properties
@@ -1,4 +1,4 @@
-spring.application.name=InforMicroservice
+spring.application.name=InforMicroserviceDocker
 server.port=8081
 
 app.message=This is application-docker.properties
