--- a/usermicroservice-prod.properties
+++ b/usermicroservice-prod.properties
@@ -11,10 +11,12 @@ spring.datasource.username=root
 spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
 
 management.tracing.sampling.probability=1.0
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
