--- a/usermicroservice.properties
+++ b/usermicroservice.properties
@@ -12,7 +12,7 @@ spring.datasource.username=root
 spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #eureke, dù comment 3 dòng này lại nhưng nó vẫn sẽ đăng kí do dependancy đc add và sẽ cấu hình mặc định như dưới
 eureka.client.serviceUrl.defaultZone=http://localhost:8888/eureka/
