--- a/config_server-docker.properties
+++ b/config_server-docker.properties
@@ -11,6 +11,12 @@ eureka.client.fetch-registry=true
 spring.cloud.config.server.git.uri=https://github.com/hoangsonha/configServer_of_MyProject.git
 spring.cloud.config.server.git.default-label=main
 
+
+spring.cloud.config.name=config_server
+spring.cloud.config.label=main
+spring.config.import=configserver:http://config_server:8086
+
+
 # nếu private
 #spring.cloud.config.server.git.username=<your-github-username>
 #spring.cloud.config.server.git.password=<your-personal-access-token>
