--- a/config_server-docker.properties
+++ b/config_server-docker.properties
@@ -14,7 +14,7 @@ spring.cloud.config.server.git.default-label=main
 
 spring.cloud.config.name=config_server
 spring.cloud.config.label=main
-spring.config.import=configserver:http://config_server:8086
+spring.config.import=configserver:http://config-server:8086
 
 
 # nếu private
