--- a/usermicroservice-docker.properties
+++ b/usermicroservice-docker.properties
@@ -26,6 +26,11 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 
+spring.cloud.config.name=usermicroservice
+spring.cloud.config.label=main
+spring.config.import=optional:configserver:http://usermicroservice:8086
+
+
 # Zipkin
 # trace each and every request, khi ở production thì sẽ tốn thời gian để trace tất cả nên sẽ giảm xuống còn 0.6
 management.tracing.sampling.probability=1.0
