--- a/configserver-docker.properties
+++ b/configserver-docker.properties
@@ -12,7 +12,7 @@ spring.cloud.config.server.git.uri=https://github.com/hoangsonha/configServer_of
 spring.cloud.config.server.git.default-label=main
 
 
-spring.cloud.config.name=config_server
+spring.cloud.config.name=configserver
 spring.cloud.config.label=main
 spring.config.import=configserver:http://config-server:8086
 
