--- a/configserver-docker.properties
+++ b/configserver-docker.properties
@@ -14,7 +14,7 @@ spring.cloud.config.server.git.default-label=main
 
 spring.cloud.config.name=configserver
 spring.cloud.config.label=main
-spring.config.import=configserver:http://config-server:8086
+spring.config.import=optional:configserver:http://config-server:8086
 
 
 # nếu private
