--- a/configserver-docker.properties
+++ b/configserver-docker.properties
@@ -1,5 +1,7 @@
 spring.application.name=ConfigServerDocker
 
+app.message=hoang son ha
+
 server.port=8086
 
 #eureke, dù comment 3 dòng này lại nhưng nó vẫn sẽ đăng kí do dependancy đc add và sẽ cấu hình mặc định như dưới
