--- a/informicroservice-docker.properties
+++ b/informicroservice-docker.properties
@@ -11,6 +11,7 @@ spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 #jwt
