--- a/informicroservice-docker.properties
+++ b/informicroservice-docker.properties
@@ -9,9 +9,11 @@ spring.datasource.url=jdbc:postgresql://info_db:5433/info_microservice
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=never
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 
 #jwt
