--- a/informicroservice-docker.properties
+++ b/informicroservice-docker.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:postgresql://info_db:5433/info_microservice
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.sql.init.mode=never
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
