--- a/informicroservice-docker.properties
+++ b/informicroservice-docker.properties
@@ -11,9 +11,10 @@ spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+#Tắt hoàn toàn việc khởi tạo cơ sở dữ liệu
 spring.sql.init.mode=never
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=true
 
 
 #jwt
