--- a/informicroservice-docker.properties
+++ b/informicroservice-docker.properties
@@ -9,12 +9,11 @@ spring.datasource.url=jdbc:postgresql://info_db:5433/info_microservice
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
 #Tắt hoàn toàn việc khởi tạo cơ sở dữ liệu
 spring.sql.init.mode=never
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+spring.jpa.hibernate.ddl-auto=update
 
 
 #jwt
