--- a/informicroservice-docker.properties
+++ b/informicroservice-docker.properties
@@ -13,7 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #Tắt hoàn toàn việc khởi tạo cơ sở dữ liệu
 spring.sql.init.mode=never
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 
 #jwt
