--- a/informicroservice-dev.properties
+++ b/informicroservice-dev.properties
@@ -20,7 +20,7 @@ jwt.algorithms=HmacSHA256
 
 
 #eureke, dù comment 3 dòng này lại nhưng nó vẫn sẽ đăng kí do dependancy đc add và sẽ cấu hình mặc định như dưới
-eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
@@ -29,4 +29,4 @@ eureka.client.fetch-registry=true
 # trace each and every request, khi ở production thì sẽ tốn thời gian để trace tất cả nên sẽ giảm xuống còn 0.6
 management.tracing.sampling.probability=1.0
 # mặc định là sẽ chạy url này nên k thêm config bên dư cũng k sao
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
