--- a/informicroservice.properties
+++ b/informicroservice.properties
@@ -31,3 +31,5 @@ eureka.client.fetch-registry=true
 management.tracing.sampling.probability=1.0
 # mặc định là sẽ chạy url này nên k thêm config bên dư cũng k sao
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+
+management.endpoints.web.exposure.include=health,info,refresh
