--- a/informicroservice-dev.properties
+++ b/informicroservice-dev.properties
@@ -1,5 +1,5 @@
 
-app.message=This is Dev config for InforMicroservice test
+app.message=This is Dev config for InforMicroservice
 
 spring.application.name=InforMicroserviceDev
 server.port=8081
