--- a/informicroservice-docker.properties
+++ b/informicroservice-docker.properties
@@ -1,7 +1,7 @@
 spring.application.name=InforMicroserviceDocker
 server.port=8081
 
-app.message=This is application-docker.properties
+app.message=This is Docker for InforMicroservice
 
 server.servlet.context-path=/info
 
