--- a/usermicroservice-docker.properties
+++ b/usermicroservice-docker.properties
@@ -16,19 +16,21 @@ spring.datasource.url=jdbc:mysql://user_db:3307/user_microservice
 spring.datasource.username=root
 spring.datasource.password=123456789
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#Tắt hoàn toàn việc khởi tạo cơ sở dữ liệu
+spring.sql.init.mode=never
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+spring.jpa.hibernate.ddl-auto=none
 
 
 #eureke, dù comment 3 dòng này lại nhưng nó vẫn sẽ đăng kí do dependancy đc add và sẽ cấu hình mặc định như dưới
-eureka.client.serviceUrl.defaultZone=http://eureka:8888/eureka/
+eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 
-spring.cloud.config.name=usermicroservice
-spring.cloud.config.label=main
-spring.config.import=optional:configserver:http://usermicroservice:8086
 
 
 # Zipkin
@@ -50,7 +52,7 @@ jwt.prefix=Bearer
 
 
 #kafka        (Producer)
-spring.kafka.bootstrap-servers=localhost:9094
+spring.kafka.bootstrap-servers=kafka:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 #(send message String)
