--- a/usermicroservice-docker.properties
+++ b/usermicroservice-docker.properties
@@ -12,6 +12,7 @@ server.port=8080
 
 server.servlet.context-path=/user
 
+#dùng cổng nội bộ mapping : ví dụ 8081:8080 thì lấy 8080
 spring.datasource.url=jdbc:mysql://user_db:3306/user_microservice
 spring.datasource.username=root
 spring.datasource.password=123456789
